--- a/css/theme/sky.css
+++ b/css/theme/sky.css
@@ -217,8 +217,9 @@ body {
   background: rgba(255, 255, 255, 0.12);
  /**
   border: 4px solid #333;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
  **/
+  }
 
 .reveal a img {
   -webkit-transition: all 0.15s linear;
